--- a/public/assets/css/main.scss
+++ b/public/assets/css/main.scss
@@ -67,6 +67,8 @@ body{
     overflow: hidden;
     & ul{
         margin-left: -20px;
+        margin-top: 0px;
+        transition: margin-top 0.4s;
     }
     &:hover button{
         bottom: 15px;
@@ -138,7 +140,8 @@ select{
 .day ul div{
     display: flex;
     align-content: center;
-    margin: -10px -30px 10px;
+    margin: 5px -20px 0px;
+    font-family: "Open Sans";
 }
 .day ul li{
     cursor: pointer;
@@ -153,23 +156,23 @@ select{
     background: black;
     color: white;
     font-size: 12px;
-    position: absolute;
+    position: fixed;
     margin: -25px 0px;
     padding: 5px 10px;
     border-radius: 5px;
     opacity: 0;
     display: none;
-    transition: opacity 0.6s, display 0.6s;
+    transition: opacity 0.6s;
     font-weight: 100;
-    z-index: 1;
+    z-index: 2;
 }
 .fa-star{
-    margin: 3px 2px;
+    margin: 3px -2px;
     color: #888 !important;
     cursor: pointer;
 }
 .fa-link{
-    margin: 3.5px 3.5px 3.5px 10px;
+    margin: 3.5px 8px 3.5px 5px;
     color: #888 !important;
     cursor: pointer;
 }
