--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,54 +1,127 @@
-@import url("https://fonts.googleapis.com/css?family=Merriweather:400,700,900|Open+Sans:300,300i,400,400i,600,600i&display=swap");
 body {
   margin: 0;
   padding: 0;
-  font-family: "Merriweather";
+  font-family: "Rubik";
+}
+.top{
+  width: 100%;
+  text-align: center;
+}
+.top-items{
+  display: inline-flex;
+  margin-top: -18px;
+  width: 600px;
 }
 
-.top {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.shape-bg{
+  width: 400px;
+  height: 60px;
   display: flex;
   position: relative;
+  overflow: hidden;
+  margin: 15px 40px;
+  border-radius: 40px;
+  box-shadow: 0px 7px 15px #ccc;
 }
-
+.shape-bg div{
+  border-radius: 50%;
+  position: absolute;
+}
+.shape-bg div:nth-child(1){
+  background: linear-gradient(to top, #e67e22 10%, #f6e58d);
+  height: 60px;
+  width: 60px;
+  top: 10px;
+}
+.shape-bg div:nth-child(2){
+  background: linear-gradient(to top, #2ecc71 10%, #81ecec);
+  height: 30px;
+  width: 30px;
+  top: 5px;
+  left: 40px;
+}
+.shape-bg div:nth-child(3){
+  background: linear-gradient(to top, #341f97 10%, #9b59b6);
+  height: 35px;
+  width: 35px;
+  right: 40px;
+  top: 20px;
+  z-index: -1;
+}
+.shape-bg div:nth-child(4){
+  background: linear-gradient(to top, #be2edd 10%, #eb4d4b);
+  height: 80px;
+  width: 80px;
+  right: -10px;
+  top: -30px;
+  z-index: -2;
+}
 .month-title {
   font-size: 32px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#7bed9f), to(#2ecc71));
-  background: linear-gradient(to bottom, #7bed9f, #2ecc71);
-  color: white;
-  width: 350px;
-  border-radius: 15px;
-  -webkit-box-shadow: 0px 4px 10px #bbb;
-          box-shadow: 0px 4px 10px #bbb;
+  color: black;
+  width: 100%;
   text-align: center;
-  margin: 15px auto;
+  margin: 8px auto;
 }
 
 .month-title .month-text {
-  padding: 50px 50px;
+  font-weight: 600;
+  padding: 50px 60px;
 }
 
 .month-title i {
+  color: white !important;
+  text-shadow: 3px 3px 10px #777;
   cursor: pointer;
 }
 
-.top button {
+.top-items button {
   border: none;
-  background: -webkit-gradient(linear, left top, left bottom, from(#7bed9f), to(#2ecc71));
-  background: linear-gradient(to bottom, #7bed9f, #2ecc71);
-  position: absolute;
-  padding: 0px 40px;
-  right: 30px;
-  border-radius: 15px;
-  -webkit-box-shadow: 0px 4px 10px #bbb;
-          box-shadow: 0px 4px 10px #bbb;
-  top: 15px;
+  background: black;
+  padding: 0px 15px;
+  margin: 15px 0px;
+  border-radius: 50px;
+  box-shadow: 0px 4px 10px #bbb;
   cursor: pointer;
   outline: none;
-  bottom: 15px;
 }
-
+.fav-hover i{
+  color: white !important;
+  padding-top: 10px;
+}
+.fav-hover{
+  border: none;
+  background: black;
+  padding: 0px 15px;
+  margin: 15px 0px;
+  z-index: 3;
+  border-radius: 50px;
+  box-shadow: 0px 4px 10px #bbb;
+}
+.fav-hover:hover .fav-bottom{
+  display: block;
+}
+.fav-bottom{
+  position: absolute;
+  margin: -17px -15px;
+  width: auto;
+  padding-top: 20px;
+  background: black;
+  z-index: -1;
+  border-radius: 15px;
+  border-top-left-radius: 0px;
+  display: none;
+}
+.fav-bottom li{
+  list-style: none;
+  padding: 0px 10px 0px 0px;
+  margin-left: -30px;
+  color: white;
+  cursor: pointer;
+}
+.fav-bottom li:hover{
+  text-decoration: underline;
+}
 .week {
   display: -ms-grid;
   display: grid;
@@ -61,13 +134,16 @@ body {
 }
 
 .day {
-  border: solid 1px #ccc;
-  padding: 10px;
+  border-radius: 10px;
+  margin: 5px;
+  padding: 7px;
   width: 180px;
   height: 130px;
   background: #fafafa;
   position: relative;
   overflow: hidden;
+  border: solid 3px #ddd;
+  box-shadow: 4px 4px 10px #ddd;
 }
 
 .day ul {
@@ -82,20 +158,80 @@ body {
 }
 
 .head-weekday {
-  border: solid 1px #ccc;
-  padding: 10px;
+  padding: 15px 7px;
   width: 180px;
-  background: #fafafa;
+  background: white;
   position: relative;
+  border-radius: 10px;
+  margin: 5px;
 }
-
+.head-weekday:nth-child(1){
+  /* background: #ff7979; */
+  border: solid 3px #ff7979;
+} 
+.head-weekday:nth-child(1) .title{
+  /* background: #ff7979; */
+  color: #ff7979;
+} 
+.head-weekday:nth-child(2){
+  /* background: #ffbe76; */
+  border: solid 3px #ffbe76;
+} 
+.head-weekday:nth-child(2) .title{
+  /* background: #ff7979; */
+  color: #ffbe76;
+} 
+.head-weekday:nth-child(3){
+  /* background: #ffd940; */
+  border: solid 3px #ffd940;
+} 
+.head-weekday:nth-child(3) .title{
+  /* background: #ff7979; */
+  color: #ffd940;
+} 
+.head-weekday:nth-child(4){
+  /* background: #7bed9f; */
+  border: solid 3px #7bed9f;
+} 
+.head-weekday:nth-child(4) .title{
+  /* background: #ff7979; */
+  color: #7bed9f;
+} 
+.head-weekday:nth-child(5){
+  /* background: #55efc4; */
+  border: solid 3px #55efc4;
+} 
+.head-weekday:nth-child(5) .title{
+  /* background: #ff7979; */
+  color: #55efc4;
+} 
+.head-weekday:nth-child(6){
+  /* background: #74b9ff; */
+  border: solid 3px #74b9ff;
+} 
+.head-weekday:nth-child(6) .title{
+  /* background: #ff7979; */
+  color: #74b9ff;
+} 
+.head-weekday:nth-child(7){
+  /* background: #9c88ff; */
+  border: solid 3px #9c88ff;
+} 
+.head-weekday:nth-child(7) .title{
+  /* background: #ff7979; */
+  color: #9c88ff;
+} 
 .head-weekday .title {
-  font-weight: 600;
+  font-weight: 800;
+  color: black;
+  text-align: center;
+  font-size: 18px;
 }
 
 .day-title {
-  font-weight: 400;
+  font-weight: 600;
   font-size: 22px;
+  text-shadow: 2px 2px 10px #ddd;
   color: #aaa;
 }
 
@@ -108,6 +244,8 @@ body {
 
 .day-off {
   background: #e2e2e2;
+  border: none;
+  padding: 10px;
 }
 
 .day button {
@@ -115,10 +253,10 @@ body {
   height: 40px;
   width: 40px;
   font-size: 25px;
-  padding: 0px 5px 5px;
+  font-family: "Rubik";
+  padding: 0px 5px 2px;
   color: white;
-  background: -webkit-gradient(linear, left top, left bottom, from(#7bed9f), to(#2ecc71));
-  background: linear-gradient(to bottom, #7bed9f, #2ecc71);
+  background: black;
   border: none;
   -webkit-box-shadow: 0px 4px 10px #bbb;
           box-shadow: 0px 4px 10px #bbb;
@@ -146,7 +284,7 @@ select {
   font-size: 20px;
 }
 
-.day-modal, .edit-modal, .login-modal {
+.day-modal, .edit-modal, .edit-item-modal {
   display: none;
   position: absolute;
   top: 50%;
@@ -170,11 +308,11 @@ select {
   -ms-flex-line-pack: center;
       align-content: center;
   margin: 5px -20px 0px;
-  font-family: "Open Sans";
 }
 
 .day ul li {
   cursor: pointer;
+  font-family: "Rubik";
   list-style: none;
   color: #888;
 }
@@ -199,7 +337,9 @@ select {
   font-weight: 100;
   z-index: 2;
 }
-
+.day i{
+  text-shadow: 2px 2px 10px #ccc;
+}
 .fa-star {
   margin: 3px -2px;
   color: #888 !important;
@@ -218,19 +358,3 @@ select {
   cursor: pointer;
 }
 
-.fav-bottom {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-}
-
-.fav-bottom li {
-  cursor: pointer;
-}
-
-.fav-bottom li:hover {
-  color: #e74c3c;
-  text-decoration: line-through;
-}
-/*# sourceMappingURL=main.css.map */
