--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -128,7 +128,6 @@ body {
   -ms-grid-columns: auto auto auto auto auto auto auto;
       grid-template-columns: auto auto auto auto auto auto auto;
   grid-gap: 0px;
-  padding: 0px;
   max-width: 1414px;
   margin: auto;
 }
@@ -227,7 +226,13 @@ body {
   text-align: center;
   font-size: 18px;
 }
-
+.content{
+  margin: auto;
+  width: 1590px;
+}
+.flex-group{
+  display: flex;
+}
 .day-title {
   font-weight: 600;
   font-size: 22px;
@@ -300,7 +305,9 @@ select {
 .modal-section {
   margin: 20px 15px;
 }
-
+.weekday-week{
+  padding: 0px 112px;
+}
 .day ul div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -339,6 +346,25 @@ select {
 }
 .day i{
   text-shadow: 2px 2px 10px #ccc;
+}
+.num-week-section{
+  display: inline;
+}
+.top-num-week{
+  border: solid #ccc;
+  height: 130px;
+  width: 60px;
+  margin: 7px 15px 14px;
+  padding: 5px 8px;
+  border-radius: 10px;
+  font-weight: 700;
+  box-shadow: 0px 4px 15px #ccc;
+}
+.num-week{
+  text-align: center;
+  width: 60px;
+  margin-top: 58px;
+  font-size: 1.15em;
 }
 .fa-star {
   margin: 3px -2px;
