--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -298,12 +298,24 @@ select {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  border: solid 5px;
   background: white;
-  -webkit-box-shadow: 0px 2px 15px #aaa;
-          box-shadow: 0px 2px 15px #aaa;
+          box-shadow: 0px 10px 30px #888;
+          border-radius: 40px;
+        padding: 20px 15px;
 }
-
+.modal-section input{
+  border: solid 1px #555;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-family: "Rubik";
+}
+.modal-section button{
+  border: solid 1px #555;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-family: "Rubik";
+  cursor: pointer;
+}
 .modal-section {
   margin: 20px 15px;
 }
